--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>初遇</title>
 		<link rel="icon" href="favicon.ico" type="image/x-icon" />
-	<!-- 	<script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
+		<!-- <link href="https://cdn.bootcdn.net/ajax/libs/Swiper/5.3.6/css/swiper.min.css" rel="stylesheet"> -->
+		<script src="https://cdn.bootcss.com/vue/2.5.2/vue.min.js"></script>
 		<script src="https://cdn.bootcss.com/vue-router/3.0.6/vue-router.min.js"></script> 
-		<script src="https://cdn.bootcss.com/element-ui/2.9.1/index.js"></script> -->
-		
+		<!-- <script src="https://cdn.bootcss.com/element-ui/2.9.1/index.js"></script> -->
 		<style type="text/css">
 			*{
 				margin: 0;
@@ -79,6 +79,7 @@
 		</div>
 		<script src="./debug/GenerateTestUserSig.js"></script>
 		<script src="./debug/lib-generate-test-usersig.min.js"></script>
+		<!-- <script src="https://cdn.bootcdn.net/ajax/libs/Swiper/5.3.6/js/swiper.min.js"></script> -->
 		<script>
 			try{
 				var my_app_loading = document.getElementById('my_app_loading')
